Finally fix whitespace bs

--- a/public/style.css
+++ b/public/style.css
@@ -28,6 +28,12 @@ body {
     color: #BBB;
 }
 
+/*
+ *  New/update gig modal
+ */
+.edit-modal textarea {
+    white-space: pre-line;
+}
 
 /*
  * Parsley
